# plannerfinanceiro

./: .gitignore  README.md  build-dist.js  exemplo-dados.json  index.html  manifest.json  package.json  script.js  styles.css  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
