[package]
name = "planner-financeiro"
version = "1.0.0"
description = "Planner Financeiro - Gestão Financeira Pessoal"
authors = ["jovemegidio"]
edition = "2021"

[lib]
name = "planner_financeiro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
